<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MapFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toStartOf="@+id/ibMapMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/ibMapMenu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:contentDescription="@string/menu"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_menu_24_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibMapLocation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:contentDescription="@string/location"
        android:rotation="30"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_navigation_24_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibMapMenu" />

    <ImageButton
        android:id="@+id/ibZoomIn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:background="@color/white"
        android:contentDescription="@string/zoomIn"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_add_24_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRestaurants" />

    <ImageButton
        android:id="@+id/ibZoomOut"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:contentDescription="@string/zoomOut"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_remove_24_black"
        app:layout_constraintStart_toStartOf="@+id/ibZoomIn"
        app:layout_constraintTop_toBottomOf="@+id/ibZoomIn" />

    <ImageButton
        android:id="@+id/ibStreeView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@null"
        android:contentDescription="@string/streetView"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_streetview_24_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibMapLocation" />

    <Button
        android:id="@+id/btRestaurants"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/baseline_restaurant_24_black"
        android:text="@string/restaurants"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@id/btnCafes"/>

    <Button
        android:id="@+id/btnCafes"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/baseline_local_cafe_24_black"
        android:text="@string/cafes"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/btRestaurants"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@id/btnHotels"/>

    <Button
        android:id="@+id/btnHotels"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/baseline_hotel_24_black"
        android:text="@string/hotels"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCafes"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />



</androidx.constraintlayout.widget.ConstraintLayout>